final route change for Wes
