# routes/users.js
@@ -9,6 +9,6 @@ router.get('/getAll/', requiresAuth(), userController.getAll);
 router.get('/:id', requiresAuth(), userController.getSingle);
 router.post('/', requiresAuth(), validation.saveUser, userController.createUser);
 router.put('/:id', requiresAuth(), validation.saveUser, userController.updateUser);
-router.delete('/:id', requiresAuth(), userController.deleteSingle);
+router.delete('/deleteSingle/:id', requiresAuth(), userController.deleteSingle);
 
 module.exports = router;
